Dark mode and responsivity issue

--- a/src/app/employee/employee.page.scss
+++ b/src/app/employee/employee.page.scss
@@ -63,7 +63,6 @@
 
         .card-row{
             margin-top: 50px;
-            margin-bottom: 50%;
             flex-wrap: nowrap;
             justify-content: flex-start;
             .card-wrapper{
